Alignment fixed

--- a/style.css
+++ b/style.css
@@ -414,6 +414,7 @@ ul li a:hover {
   }
   .about-text{
     max-width: 280px;
+    text-align: center;
   }
   .contact-content {
     flex-direction: column;
